Bug 289880 - Marble crashes on search
Summary: Marble crashes on search
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-26 20:00 UTC by Christian Weilbach
Modified: 2012-01-03 18:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Weilbach 2011-12-26 20:00:24 UTC
Application: marble (1.2.2 (stable release))
KDE Platform Version: 4.7.4 (4.7.4)
Qt Version: 4.8.0
Operating System: Linux 3.1.6-1.fc16.x86_64 x86_64
Distribution: "Fedora release 16 (Verne)"

-- Information about the crash:
- What I was doing when the application crashed:
Searching for a place in Marble, while having done a search previously.

-- Backtrace:
Application: Marble Virtual Globe (marble), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7f6d068dd840 (LWP 20766))]

Thread 9 (Thread 0x7f6cfabdb700 (LWP 20769)):
#0  0x0000003a93c09dd5 in __pthread_mutex_lock (mutex=0x7f6cf40009a8) at pthread_mutex_lock.c:65
#1  0x0000003a958436a9 in g_main_context_acquire (context=0x7f6cf40009a0) at gmain.c:2512
#2  0x0000003a95844da1 in g_main_context_iterate (context=0x7f6cf40009a0, block=1, dispatch=1, self=<optimized out>) at gmain.c:3017
#3  0x0000003a9584544c in g_main_context_iteration (context=0x7f6cf40009a0, may_block=1) at gmain.c:3136
#4  0x00000038595a79c6 in QEventDispatcherGlib::processEvents (this=0x7f6cf40008c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x0000003859577dc2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x0000003859578017 in QEventLoop::exec (this=0x7f6cfabdad10, flags=...) at kernel/qeventloop.cpp:204
#7  0x0000003859478ad7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x0000003859557b9f in QInotifyFileSystemWatcherEngine::run (this=0x203df20) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x000000385947bb1b in QThreadPrivate::start (arg=0x203df20) at thread/qthread_unix.cpp:298
#10 0x0000003a93c07d90 in start_thread (arg=0x7f6cfabdb700) at pthread_create.c:309
#11 0x0000003a934ef3dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 8 (Thread 0x7f6cf891f700 (LWP 20771)):
#0  0x0000003a934e6a43 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x0000003a95844f88 in g_main_context_poll (n_fds=1, fds=0x7f6cec002200, priority=<optimized out>, timeout=-1, context=0x7f6cec0009a0) at gmain.c:3386
#2  g_main_context_iterate (context=0x7f6cec0009a0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3068
#3  0x0000003a9584544c in g_main_context_iteration (context=0x7f6cec0009a0, may_block=1) at gmain.c:3136
#4  0x00000038595a79c6 in QEventDispatcherGlib::processEvents (this=0x7f6cec0008c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x0000003859577dc2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x0000003859578017 in QEventLoop::exec (this=0x7f6cf891ed10, flags=...) at kernel/qeventloop.cpp:204
#7  0x0000003859478ad7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x0000003859557b9f in QInotifyFileSystemWatcherEngine::run (this=0x2202290) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x000000385947bb1b in QThreadPrivate::start (arg=0x2202290) at thread/qthread_unix.cpp:298
#10 0x0000003a93c07d90 in start_thread (arg=0x7f6cf891f700) at pthread_create.c:309
#11 0x0000003a934ef3dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 7 (Thread 0x7f6ce77fe700 (LWP 20777)):
#0  0x0000003a93c09dd5 in __pthread_mutex_lock (mutex=0x7f6cd8091f08) at pthread_mutex_lock.c:65
#1  0x0000003a95845064 in g_main_context_iterate (context=0x7f6cd8091f00, block=1, dispatch=1, self=<optimized out>) at gmain.c:3039
#2  0x0000003a9584544c in g_main_context_iteration (context=0x7f6cd8091f00, may_block=1) at gmain.c:3136
#3  0x00000038595a79c6 in QEventDispatcherGlib::processEvents (this=0x7f6cd80008c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#4  0x0000003859577dc2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x0000003859578017 in QEventLoop::exec (this=0x7f6ce77fdcf0, flags=...) at kernel/qeventloop.cpp:204
#6  0x0000003859478ad7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00000038695d0440 in Marble::FileStorageWatcher::run (this=0x2043490) at /usr/src/debug/marble-4.7.4/src/lib/FileStorageWatcher.cpp:401
#8  0x000000385947bb1b in QThreadPrivate::start (arg=0x2043490) at thread/qthread_unix.cpp:298
#9  0x0000003a93c07d90 in start_thread (arg=0x7f6ce77fe700) at pthread_create.c:309
#10 0x0000003a934ef3dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 6 (Thread 0x7f6ce4f2b700 (LWP 20789)):
#0  0x0000003a934e6a43 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x0000003a95844f88 in g_main_context_poll (n_fds=1, fds=0x7f6cc80012e0, priority=<optimized out>, timeout=-1, context=0x7f6cc80009a0) at gmain.c:3386
#2  g_main_context_iterate (context=0x7f6cc80009a0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3068
#3  0x0000003a9584544c in g_main_context_iteration (context=0x7f6cc80009a0, may_block=1) at gmain.c:3136
#4  0x00000038595a79c6 in QEventDispatcherGlib::processEvents (this=0x7f6cc80008c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x0000003859577dc2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x0000003859578017 in QEventLoop::exec (this=0x7f6ce4f2ad40, flags=...) at kernel/qeventloop.cpp:204
#7  0x0000003859478ad7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x000000385947bb1b in QThreadPrivate::start (arg=0x20a31c0) at thread/qthread_unix.cpp:298
#9  0x0000003a93c07d90 in start_thread (arg=0x7f6ce4f2b700) at pthread_create.c:309
#10 0x0000003a934ef3dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 5 (Thread 0x7f6ce7fff700 (LWP 20794)):
#0  0x0000003a93c0af8d in __pthread_mutex_unlock_usercnt (mutex=<optimized out>, decr=<optimized out>) at pthread_mutex_unlock.c:53
#1  __pthread_mutex_unlock (mutex=0x7f6cdc002468) at pthread_mutex_unlock.c:298
#2  0x0000003a95844004 in g_main_context_prepare (context=0x7f6cdc002460, priority=0x7f6ce7ffec18) at gmain.c:2744
#3  0x0000003a95844e1d in g_main_context_iterate (context=0x7f6cdc002460, block=1, dispatch=1, self=<optimized out>) at gmain.c:3053
#4  0x0000003a9584544c in g_main_context_iteration (context=0x7f6cdc002460, may_block=1) at gmain.c:3136
#5  0x00000038595a79c6 in QEventDispatcherGlib::processEvents (this=0x7f6cdc003fb0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#6  0x0000003859577dc2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x0000003859578017 in QEventLoop::exec (this=0x7f6ce7ffed40, flags=...) at kernel/qeventloop.cpp:204
#8  0x0000003859478ad7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#9  0x000000385947bb1b in QThreadPrivate::start (arg=0x3234890) at thread/qthread_unix.cpp:298
#10 0x0000003a93c07d90 in start_thread (arg=0x7f6ce7fff700) at pthread_create.c:309
#11 0x0000003a934ef3dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 4 (Thread 0x7f6cf18df700 (LWP 20795)):
#0  0x0000003a934e6a43 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x0000003a95844f88 in g_main_context_poll (n_fds=1, fds=0x7f6cea8465a0, priority=<optimized out>, timeout=-1, context=0x7f6ce8002660) at gmain.c:3386
#2  g_main_context_iterate (context=0x7f6ce8002660, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3068
#3  0x0000003a9584544c in g_main_context_iteration (context=0x7f6ce8002660, may_block=1) at gmain.c:3136
#4  0x00000038595a79c6 in QEventDispatcherGlib::processEvents (this=0x7f6cea8308a0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x0000003859577dc2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x0000003859578017 in QEventLoop::exec (this=0x7f6cf18ded40, flags=...) at kernel/qeventloop.cpp:204
#7  0x0000003859478ad7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x000000385947bb1b in QThreadPrivate::start (arg=0x32e1c00) at thread/qthread_unix.cpp:298
#9  0x0000003a93c07d90 in start_thread (arg=0x7f6cf18df700) at pthread_create.c:309
#10 0x0000003a934ef3dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 3 (Thread 0x7f6cc37fe700 (LWP 20800)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:165
#1  0x0000003864984e62 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x3864c7e240) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x0000003864984e99 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x0000003a93c07d90 in start_thread (arg=0x7f6cc37fe700) at pthread_create.c:309
#4  0x0000003a934ef3dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 2 (Thread 0x7f6cbb7fe700 (LWP 20998)):
#0  0x0000003a934e6a43 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x0000003a95844f88 in g_main_context_poll (n_fds=1, fds=0x7f6c9803d9e0, priority=<optimized out>, timeout=-1, context=0x7f6c980012b0) at gmain.c:3386
#2  g_main_context_iterate (context=0x7f6c980012b0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3068
#3  0x0000003a9584544c in g_main_context_iteration (context=0x7f6c980012b0, may_block=1) at gmain.c:3136
#4  0x00000038595a79c6 in QEventDispatcherGlib::processEvents (this=0x7f6c980008c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x0000003859577dc2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x0000003859578017 in QEventLoop::exec (this=0x7f6cbb7fdd40, flags=...) at kernel/qeventloop.cpp:204
#7  0x0000003859478ad7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x000000385947bb1b in QThreadPrivate::start (arg=0x331b8e0) at thread/qthread_unix.cpp:298
#9  0x0000003a93c07d90 in start_thread (arg=0x7f6cbb7fe700) at pthread_create.c:309
#10 0x0000003a934ef3dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f6d068dd840 (LWP 20766)):
[KCrash Handler]
#6  0x00000038694eedc5 in Marble::GeoDataFeature::style (this=0x30bb2f0) at /usr/src/debug/marble-4.7.4/src/lib/geodata/data/GeoDataFeature.cpp:524
#7  0x00000038695ad95e in Marble::VisiblePlacemark::symbolPixmap (this=0x3c67040) at /usr/src/debug/marble-4.7.4/src/lib/VisiblePlacemark.cpp:40
#8  0x00000038695af158 in Marble::PlacemarkLayout::whichPlacemarkAt (this=<optimized out>, curpos=...) at /usr/src/debug/marble-4.7.4/src/lib/PlacemarkLayout.cpp:156
#9  0x000000386953d651 in Marble::MarbleMap::whichFeatureAt (this=<optimized out>, curpos=<optimized out>) at /usr/src/debug/marble-4.7.4/src/lib/MarbleMap.cpp:429
#10 0x0000003869534631 in Marble::MarbleWidget::whichFeatureAt (this=<optimized out>, curpos=<optimized out>) at /usr/src/debug/marble-4.7.4/src/lib/MarbleWidget.cpp:359
#11 0x000000386955b6e9 in Marble::MarbleWidgetDefaultInputHandler::eventFilter (this=0x204a910, o=<optimized out>, e=0x7fffd6d70d30) at /usr/src/debug/marble-4.7.4/src/lib/MarbleWidgetInputHandler.cpp:687
#12 0x0000003859578e18 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x203cf80, event=0x7fffd6d70d30) at kernel/qcoreapplication.cpp:986
#13 0x000000385a7c96bf in notify_helper (e=0x7fffd6d70d30, receiver=0x203cf80, this=0x1d176b0) at kernel/qapplication.cpp:4514
#14 QApplicationPrivate::notify_helper (this=0x1d176b0, receiver=0x203cf80, e=0x7fffd6d70d30) at kernel/qapplication.cpp:4490
#15 0x000000385a7cee43 in QApplication::notify (this=<optimized out>, receiver=0x203cf80, e=0x7fffd6d70d30) at kernel/qapplication.cpp:4061
#16 0x000000385c450766 in KApplication::notify (this=0x7fffd6d71a30, receiver=0x203cf80, event=0x7fffd6d70d30) at /usr/src/debug/kdelibs-4.7.4/kdeui/kernel/kapplication.cpp:311
#17 0x0000003859578c8c in QCoreApplication::notifyInternal (this=0x7fffd6d71a30, receiver=0x203cf80, event=0x7fffd6d70d30) at kernel/qcoreapplication.cpp:876
#18 0x000000385a7ca6c2 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:231
#19 QApplicationPrivate::sendMouseEvent (receiver=0x203cf80, event=0x7fffd6d70d30, alienWidget=0x203cf80, nativeWidget=0x1f0bc90, buttonDown=0x0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3157
#20 0x000000385a846045 in QETWidget::translateMouseEvent (this=0x1f0bc90, event=<optimized out>) at kernel/qapplication_x11.cpp:4515
#21 0x000000385a844f0a in QApplication::x11ProcessEvent (this=0x7fffd6d71a30, event=0x7fffd6d715f0) at kernel/qapplication_x11.cpp:3641
#22 0x000000385a86c5dc in x11EventSourceDispatch (s=0x1d20d10, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:148
#23 0x0000003a95844a7d in g_main_dispatch (context=0x1d054e0) at gmain.c:2425
#24 g_main_context_dispatch (context=0x1d054e0) at gmain.c:2995
#25 0x0000003a95845278 in g_main_context_iterate (context=0x1d054e0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3073
#26 0x0000003a9584544c in g_main_context_iteration (context=0x1d054e0, may_block=1) at gmain.c:3136
#27 0x00000038595a795f in QEventDispatcherGlib::processEvents (this=0x1d02d20, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#28 0x000000385a86c2ce in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:207
#29 0x0000003859577dc2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#30 0x0000003859578017 in QEventLoop::exec (this=0x7fffd6d719c0, flags=...) at kernel/qeventloop.cpp:204
#31 0x000000385957ca15 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#32 0x0000000000419f81 in main (argc=1, argv=0x7fffd6d73038) at /usr/src/debug/marble-4.7.4/src/kdemain.cpp:351

This bug may be a duplicate of or related to bug 193824.

Possible duplicates by query: bug 264880.

Reported using DrKonqi
Comment 1 Thibaut Gridel 2012-01-01 15:23:31 UTC
Git commit 4055344f3dfdf449716a91b230d7a922bf95717e by Thibaut Gridel.
Committed on 01/01/2012 at 16:07.
Pushed by tgridel into branch 'master'.

GeoDataFeature: always provide a style

M  +4    -5    src/lib/geodata/data/GeoDataFeature.cpp

http://commits.kde.org/marble/4055344f3dfdf449716a91b230d7a922bf95717e
Comment 2 Thibaut Gridel 2012-01-03 18:46:11 UTC
Git commit 544a8d6bc511f5220e7c15c7b267a0344ed09be3 by Thibaut Gridel.
Committed on 01/01/2012 at 16:07.
Pushed by tgridel into branch 'KDE/4.8'.

GeoDataFeature: always provide a style

M  +4    -5    src/lib/geodata/data/GeoDataFeature.cpp

http://commits.kde.org/marble/544a8d6bc511f5220e7c15c7b267a0344ed09be3