GeoDataFeature: always provide a style

BUG: 289880